# MeGPT

./: .gitignore  LICENSE  README.md  hello.py  main.py  pyproject.toml
llm-chat-app/: index.html  script.js  styles.css
prompts/promptEngineering/: response.txt  system-prompt.txt
src/megpt/: db.py  llm.py  main.py  models.py
static/: chat.js  components.js  script.js  settings.js  sidebar.js  styles.css  util.js
