[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "MeGPT"
version = "0.1.0"
description = "A ChatGPT-like LLM Chat app for ME"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Sho Nakatani", email = "lay.sakura@gmail.com" }]
dependencies = [
    "fastapi>=0.115.6",
    "openai>=1.59.7",
    "uvicorn>=0.34.0",
]

[tool.pdm.build]
includes = ["src/"]

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "W", # pycodestyle warnings
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "--import-mode=importlib",
]
